--- a/css/estilos.css
+++ b/css/estilos.css
@@ -883,3 +883,35 @@ color: red;
 border: solid 1px red;
 box-shadow: 0 0 10px red;
 }
+
+/* boton volver flotante */
+
+.boton-volver {
+    position: fixed;
+    width: 6rem;
+    height: 6rem;
+    bottom: 3rem;
+    right: 3rem;
+    background: var(--secundario);
+    color:var(--blanco);
+    border-radius: 50%;
+    text-align: center;
+    font-size: 4rem;
+    box-shadow: 0px 1px 10px rgba(0,0,0.3);
+    transition: ease 0.3s;
+    z-index: 100;
+}
+
+.boton-volver:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
+    background:var(--blanco);
+  
+}
+
+.boton-volver:hover i {
+    color:var(--primario);
+    background:var(--blanco);
+    transition: 0.3s;
+}
+
