optimizacion de imagenes

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -552,7 +552,7 @@ video{
 /* separador */
 
 .separador{
-    background-image: url('../assets/img/tijeras.jpg');
+    background-image: url('../assets/img/tijerascomp.jpeg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
